package model;

public class Beer extends Product {

	public Beer(String name, Double price) {
		super(name, price);
	}

}
