package model;

public class TarteFlambee extends Product {

	public TarteFlambee(String name, Double price) {
		super(name, price);
	}
}
